--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,9 @@ body {
 
 th {
     width: 50%;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #99cece;
 }
+
 
 #search__app {
     width: 100vw;
@@ -72,11 +73,18 @@ th {
     width: 100%;
     table-layout: fixed;
 }
+#result__table__body td {
+    text-align: left;
+}
+
+#result__table__body tr {
+    border-bottom: 1px solid #99cece;
+}
 
 #search__form__input {
     font-size: 25px;
     font-family:'Jura';
-    border: 2px solid #000;
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 50px;
     padding: 5px 5px 5px 50px;
     height: 40px;
